@@ -26,10 +26,11 @@ VENDORID=$(MISDOCS)\VendorID-1.0.0
 .PHONY: vitables.exe
 
 clean:
-	$(MAKE) -f Makefile_windows -C ..\doc $@
 	del $(VTNSIS)
 	del ViTables*.win32-py$(DOTPYTHONVERSION).exe
 	del vitables.exe
+	del LICENSE.html
+	$(MAKE) -f Makefile_windows -C ..\doc $@
 
 vitables.exe:
 	copy $(REPO_VITABLES)\scripts\vitables $(VENDORID)\sib\vitables.py
@@ -40,8 +41,13 @@ vitables.exe:
 	del $(VENDORID)\sib\vitables.py
 	rmdir $(VENDORID)\sib\build_vitables
 
-installer: vitables.nsi.in $(VERSIONFILE) $(LICENSEFILE) vitables.exe
-	$(MAKE) -f Makefile_windows -C ..\doc
+doc:
+	$(MAKE) -f Makefile_windows -C ..\doc all
+
+resources:
+	$(MAKE) -f Makefile -C .. $@
+
+installer: vitables.nsi.in $(VERSIONFILE) $(LICENSEFILE) vitables.exe doc resources
 	copy ..\LICENSE.html LICENSE.html
 	type vitables.nsi.in | sed -e "s/@VERSION@/$(VERSION)/g" \
 	-e "s/@PYTHONVERSION@/$(PYTHONVERSION)/g" \
